hphp/hack/test/typecheck/expression_trees/subscript_error.php.constraint_method_call.exp
ERROR: File "subscript_error.php", line 58, characters 41-46:
`$arr[]` is append syntax and is currently unsupported in expression trees. Use `$arr[$idx]` for element access. (Parsing[1002])
ERROR: File "subscript_error.php", line 77, characters 5-17:
Subscript append is not yet supported in expression trees. (Parsing[1002])
ERROR: File "subscript_error.php", line 85, characters 7-28:
Expression trees do not support array access (e.g. `arr[0]`) as the left side of the null coalesce operator (`??`). (Parsing[1002])
ERROR: File "subscript_error.php", line 92, characters 5-17:
Subscript append is not yet supported in expression trees. (Parsing[1002])
ERROR: File "subscript_error.php", line 101, characters 5-21:
Subscript append is not yet supported in expression trees. (Parsing[1002])
ERROR: File "subscript_error.php", line 108, characters 5-18:
Subscript increment/decrement is not yet supported in expression trees. (Parsing[1002])
ERROR: File "subscript_error.php", line 115, characters 5-24:
Subscript append is not yet supported in expression trees. (Parsing[1002])
ERROR: File "subscript_error.php", line 122, characters 5-21:
Subscript increment/decrement is not yet supported in expression trees. (Parsing[1002])
ERROR: File "subscript_error.php", line 135, characters 5-24:
Unsupported expression tree syntax. (Parsing[1002])
ERROR: File "subscript_error.php", line 144, characters 5-25:
The pipe operator `|>` is not supported in expression trees. (Parsing[1002])
ERROR: File "subscript_error.php", line 144, characters 13-14:
You cannot use this syntax on the left-hand side of an assignment. (Parsing[1002])
ERROR: File "subscript_error.php", line 144, characters 13-18:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
ERROR: File "subscript_error.php", line 153, characters 5-21:
Subscript append is not yet supported in expression trees. (Parsing[1002])
ERROR: File "subscript_error.php", line 163, characters 5-17:
Expression trees do not support compound assignments. Try the long form style `$foo = $foo + $bar` instead. (Parsing[1002])
ERROR: File "subscript_error.php", line 58, characters 41-44:
Variable `$arr` is undefined, or not always defined. (Naming[2050])
ERROR: File "subscript_error.php", line 77, characters 5-8:
Variable `$map` is undefined, or not always defined. (Naming[2050])
ERROR: File "subscript_error.php", line 77, characters 14-17:
Variable `$val` is undefined, or not always defined. (Naming[2050])
ERROR: File "subscript_error.php", line 92, characters 5-8:
Variable `$arr` is undefined, or not always defined. (Naming[2050])
ERROR: File "subscript_error.php", line 92, characters 14-17:
Variable `$val` is undefined, or not always defined. (Naming[2050])
ERROR: File "subscript_error.php", line 101, characters 5-8:
Variable `$arr` is undefined, or not always defined. (Naming[2050])
ERROR: File "subscript_error.php", line 101, characters 10-11:
Variable `$i` is undefined, or not always defined. (Naming[2050])
  File "subscript_error.php", line 101, characters 5-12:
  Did you mean `$arr` instead?
ERROR: File "subscript_error.php", line 101, characters 18-21:
Variable `$val` is undefined, or not always defined. (Naming[2050])
ERROR: File "subscript_error.php", line 115, characters 5-8:
Variable `$obj` is undefined, or not always defined. (Naming[2050])
ERROR: File "subscript_error.php", line 115, characters 21-24:
Variable `$val` is undefined, or not always defined. (Naming[2050])
ERROR: File "subscript_error.php", line 144, characters 5-8:
Variable `$arr` is undefined, or not always defined. (Naming[2050])
ERROR: File "subscript_error.php", line 144, characters 16-17:
Variable `$i` is undefined, or not always defined. (Naming[2050])
  File "", line 0, characters 0-0:
  Did you mean `$$` instead?
ERROR: File "subscript_error.php", line 144, characters 22-25:
Variable `$val` is undefined, or not always defined. (Naming[2050])
  File "", line 0, characters 0-0:
  Did you mean `$$` instead?
ERROR: File "subscript_error.php", line 153, characters 5-8:
Variable `$arr` is undefined, or not always defined. (Naming[2050])
ERROR: File "subscript_error.php", line 153, characters 12-13:
Variable `$j` is undefined, or not always defined. (Naming[2050])
ERROR: File "subscript_error.php", line 153, characters 18-21:
Variable `$val` is undefined, or not always defined. (Naming[2050])
ERROR: File "subscript_error.php", line 58, characters 41-44:
Cannot use `[]` for reading (NastCheck[3047])
ERROR: File "subscript_error.php", line 153, characters 5-8:
Cannot use `[]` for reading (NastCheck[3047])
ERROR: File "subscript_error.php", line 11, characters 61-70:
Typing error (Typing[4110])
  File "subscript_error.php", line 11, characters 61-64:
  Expected `int` because only `int` can be used to index into a `Vector` or `vec`.
  File "subscript_error.php", line 11, characters 37-49:
  But got `string`
ERROR: File "subscript_error.php", line 11, characters 66-69:
Invalid index type for this vec (Typing[4449])
  File "subscript_error.php", line 11, characters 15-17:
  This is an int because only `int` can be used to index into a `Vector` or `vec`.
  File "subscript_error.php", line 11, characters 37-49:
  It is incompatible with a string
ERROR: File "subscript_error.php", line 17, characters 70-73:
Invalid index type for this dict (Typing[4449])
  File "subscript_error.php", line 17, characters 11-23:
  This is a string
  File "subscript_error.php", line 17, characters 44-53:
  It is incompatible with an int
ERROR: File "subscript_error.php", line 24, characters 73-76:
Invalid index type for this dict (Typing[4449])
  File "subscript_error.php", line 24, characters 11-20:
  This is an int
  File "subscript_error.php", line 24, characters 44-56:
  It is incompatible with a string
ERROR: File "subscript_error.php", line 31, characters 64-73:
Invalid return type (Typing[4110])
  File "subscript_error.php", line 31, characters 46-58:
  Expected `string`
  File "subscript_error.php", line 31, characters 64-73:
  But got `int`
  File "subscript_error.php", line 31, characters 10-19:
    from this definition
ERROR: File "subscript_error.php", line 39, characters 7-16:
Invalid return type (Typing[4110])
  File "subscript_error.php", line 38, characters 65-77:
  Expected `string`
  File "subscript_error.php", line 39, characters 7-16:
  But got `int`
  File "subscript_error.php", line 38, characters 26-35:
    from this definition
ERROR: File "subscript_error.php", line 47, characters 7-18:
Invalid return type (Typing[4110])
  File "subscript_error.php", line 46, characters 64-76:
  Expected `string`
  File "subscript_error.php", line 47, characters 7-18:
  But got `int`
  File "subscript_error.php", line 46, characters 14-23:
    from this definition
ERROR: File "subscript_error.php", line 53, characters 51-58:
Typing error (Typing[4110])
  File "subscript_error.php", line 53, characters 51-58:
  Expected an array that can be indexed
  File "subscript_error.php", line 53, characters 15-24:
  But got `int`
ERROR: File "subscript_error.php", line 64, characters 59-68:
You are trying to access an element of this container but the container could be `null`.  (Typing[4063])
  File "subscript_error.php", line 64, characters 15-30:
  This is what makes me believe it can be `null`
ERROR: File "subscript_error.php", line 70, characters 69-78:
You are trying to access an element of this container but the container could be `null`.  (Typing[4063])
  File "subscript_error.php", line 70, characters 6-37:
  This is what makes me believe it can be `null`
ERROR: File "subscript_error.php", line 77, characters 5-17:
an object of type dict<int, string> does not allow array append (Typing[4006])
  File "subscript_error.php", line 76, characters 15-45:
  Definition is here
ERROR: File "subscript_error.php", line 135, characters 5-24:
Invalid argument (Typing[4110])
  File "expr_tree.php", line 95, characters 21-26:
  Expected `string`
  File "expr_tree.php", line 433, characters 5-20:
    resulting from expanding the type constant `ExampleDsl::TAst`
  File "subscript_error.php", line 130, characters 17-31:
  But got `vec<int>`
ERROR: File "subscript_error.php", line 178, characters 12-23:
`ExampleStringOpType` does not support this operator (it has no instance method named `__plus`) (Typing[4053])
